<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>template_project</name>
  <version>1.10.3</version>
  <description>Colcon shim package for the template_project C++ core library.</description>
  <maintainer email="pietro.califano@example.com">Pietro Califano</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>eigen</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
