<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>template_project</name>
  <version>1.11.1</version>
  <description>Reusable C++/CUDA library template with optional CUDA, OptiX, Python, MATLAB, and ROS 2 support: ROS 2 colcon shim package.</description>
  <maintainer email="petercalifano.gs@gmail.com">Pietro Califano</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/PeterCalifano/cpp_cuda_template_project</url>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>eigen</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
