<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>template_project_spinup</name>
  <version>1.10.3</version>
  <description>Launch and runtime assets for the optional template_project ROS 2 overlay.</description>
  <maintainer email="pietro.califano@example.com">Pietro Califano</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>template_project_ros</exec_depend>

  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>lifecycle_msgs</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>template_project_interfaces</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
